--- a/app/src/main/res/layout/activity_material_tab.xml
+++ b/app/src/main/res/layout/activity_material_tab.xml
@@ -117,6 +117,10 @@
 
 
     </RelativeLayout>
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px1"
+            android:background="@color/top_line"/>
 
     <android.support.v4.view.ViewPager
             android:id="@+id/tab_viewpager"
