--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -159,5 +159,6 @@
     <color name="grey_point">#dbdbdb</color>
     <color name="result_ok">#7dd096</color>
     <color name="summary_color">#969696</color>
+    <color name="top_line">#d1d5db</color>
 
 </resources>
