--- a/app/src/main/res/layout/layout_multiple_select_item.xml
+++ b/app/src/main/res/layout/layout_multiple_select_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.xiaojs.xma.ui.widget.CheckableRelativeLayout
+<cn.xiaojs.xma.ui.widget.CheckableLinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -7,52 +7,19 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:paddingLeft="15dp">
-
-    <ImageView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/px39"/>
-
     <CheckedTextView
-            android:id="@+id/choice_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checkMark="@drawable/multi_check_selector"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
             android:drawablePadding="@dimen/px24"
-            android:layout_marginRight="@dimen/px32"
+            android:textSize="18sp"
             />
-
     <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_30px"
+            android:textSize="@dimen/font_28px"
             android:textColor="@color/font_black"
-            android:layout_marginTop="@dimen/px23"
-            android:layout_marginLeft="@dimen/px28"
-            android:layout_toRightOf="@id/icon"
-            android:layout_toLeftOf="@id/choice_btn"
-            android:ellipsize="middle"
-            android:singleLine="true"
-            android:text="ewrweruwqerqwerwre"/>
-    <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/font_24px"
-            android:textColor="@color/summary_color"
-            android:layout_marginTop="@dimen/px2"
-            android:layout_alignLeft="@id/title"
-            android:layout_below="@id/title"
-            android:singleLine="true"
-            android:text="dsdfsdfsdfasf"/>
-
-</cn.xiaojs.xma.ui.widget.CheckableRelativeLayout>
-
-
-
-
+            android:layout_marginLeft="@dimen/px23"/>
+</cn.xiaojs.xma.ui.widget.CheckableLinearLayout>
