--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -140,6 +140,7 @@
 
     <string-array name="add_menu2">
         <item>开公开课</item>
+        <item>开录播课</item>
         <item>开班</item>
     </string-array>
     
