--- a/app/src/main/res/layout/activity_recorded_lesson.xml
+++ b/app/src/main/res/layout/activity_recorded_lesson.xml
@@ -12,7 +12,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:choiceMode="multipleChoice"
-        android:dividerHeight="1px"
+        android:dividerHeight="0px"
+        android:divider="@null"
         dslv:click_remove_id="@id/click_remove"
         dslv:collapsed_height="1px"
         dslv:drag_enabled="true"
