--- a/app/src/main/res/layout/item_recorded_lesson_lesson.xml
+++ b/app/src/main/res/layout/item_recorded_lesson_lesson.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/check_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/px32"
+        android:layout_height="@dimen/px32"
         android:background="@drawable/multi_check_selector"
         android:gravity="center_vertical"
         android:layout_marginLeft="@dimen/px30"
@@ -30,7 +30,6 @@
         android:textColor="@color/font_black"
         android:drawableLeft="@drawable/ic_recorded_lesson"
         android:drawablePadding="@dimen/px16"
-        android:textStyle="bold"
         android:maxLines="1"
         />
 
