--- a/app/src/main/res/layout/item_home_classes_label.xml
+++ b/app/src/main/res/layout/item_home_classes_label.xml
@@ -14,22 +14,57 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的班"
             android:textSize="@dimen/font_28px"
             android:drawableLeft="@drawable/shape_line_vertical_orange"
-            android:drawablePadding="@dimen/px13"
             android:gravity="center_vertical"
             android:textColor="@color/font_black"
             />
 
         <TextView
+            android:id="@+id/tab_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="班"
+            android:textSize="@dimen/font_28px"
+            android:paddingLeft="@dimen/px38"
+            android:paddingRight="@dimen/px38"
+            android:gravity="center"
+            android:textColor="@color/selector_btn_orange_black2"
+            />
+
+
+        <View
+            android:layout_width="@dimen/px2"
+            android:layout_height="@dimen/px28"
+            android:layout_gravity="center_vertical"
+            android:background="@color/grey_point"
+            />
+
+        <TextView
+            android:id="@+id/tab_record_lesson"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/px38"
+            android:text="录播课"
+            android:minEms="3"
+            android:textSize="@dimen/font_28px"
+            android:drawablePadding="@dimen/px13"
+            android:gravity="center"
+            android:textColor="@color/selector_btn_orange_black2"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="1dp"/>
+
+        <TextView
             android:id="@+id/tv_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="全部"
+            android:text="更多"
             android:textSize="@dimen/font_28px"
             android:padding="5dp"
             android:textColor="@color/subject_selected_blue"
