--- a/app/src/main/res/layout/activity_create_recorded_lesson.xml
+++ b/app/src/main/res/layout/activity_create_recorded_lesson.xml
@@ -59,7 +59,7 @@
             <TextView
                 android:id="@+id/btn_teacher"
                 style="@style/LiveLessonRightEntrance"
-                android:hint="@string/please_select" />
+                android:drawableRight="@null" />
         </LinearLayout>
 
         <!--是否需要报名-->
