--- a/app/src/main/res/layout/activity_recordlesson_enroll.xml
+++ b/app/src/main/res/layout/activity_recordlesson_enroll.xml
@@ -66,7 +66,7 @@
             android:listSelector="@android:color/transparent"
             android:orientation="vertical"
             android:layout_below="@id/base_header_divider"
-            android:layout_above="@id/apply_btn"/>
+            android:layout_above="@id/enroll_btn"/>
 
 </RelativeLayout>
 
