--- a/app/src/main/res/layout/activity_recordlesson_enroll.xml
+++ b/app/src/main/res/layout/activity_recordlesson_enroll.xml
@@ -1,72 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <Button
-            android:id="@+id/enroll_btn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px100"
-            android:text="@string/lesson_apply"
-            android:textColor="@drawable/common_btn_white_text_selector"
-            android:background="@drawable/big_submit_btn_selector"
-            android:textSize="@dimen/font_32px"
-            android:layout_alignParentBottom="true"
-            />
+        android:id="@+id/enroll_btn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px100"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/big_submit_btn_selector"
+        android:text="@string/lesson_apply"
+        android:textColor="@drawable/common_btn_white_text_selector"
+        android:textSize="@dimen/font_32px" />
 
 
     <RelativeLayout
-            android:id="@+id/lay_title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px90"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:layout_alignParentTop="true">
+        android:id="@+id/lay_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px90"
+        android:layout_alignParentTop="true"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/back_btn"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px32"
-                android:paddingRight="@dimen/px32"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:src="@drawable/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:id="@+id/back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:paddingBottom="@dimen/px16"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:src="@drawable/back_arrow" />
 
         <ImageView
-                android:id="@+id/share_btn"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px32"
-                android:paddingRight="@dimen/px40"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/share_selector"/>
+            android:id="@+id/share_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:paddingBottom="@dimen/px16"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px40"
+            android:paddingTop="@dimen/px16"
+            android:src="@drawable/share_selector" />
 
     </RelativeLayout>
 
     <View
-            android:id="@+id/base_header_divider"
-            style="@style/DividerHorizontal"
-            android:layout_below="@id/lay_title"/>
+        android:id="@+id/base_header_divider"
+        style="@style/DividerHorizontal"
+        android:layout_below="@id/lay_title" />
 
 
     <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:listSelector="@android:color/transparent"
-            android:orientation="vertical"
-            android:layout_below="@id/base_header_divider"
-            android:layout_above="@id/enroll_btn"/>
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/enroll_btn"
+        android:layout_below="@id/base_header_divider"
+        android:divider="@null"
+        android:listSelector="@android:color/transparent"
+        android:orientation="vertical"
+        android:scrollbars="none" />
 
 </RelativeLayout>
 
