--- a/app/src/main/res/layout/layout_recordlesson_enroll_header.xml
+++ b/app/src/main/res/layout/layout_recordlesson_enroll_header.xml
@@ -8,10 +8,10 @@
         android:id="@+id/lesson_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/px39"
+        android:paddingBottom="@dimen/px1"
         android:scaleType="centerCrop"
         android:src="@drawable/default_lesson_cover"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <RelativeLayout
         style="@style/lesson_home_layout"
@@ -107,6 +107,7 @@
         android:layout_marginTop="@dimen/px30"
         android:background="@color/white"
         android:gravity="center"
+        android:checkedButton="@+id/tab_info"
         android:orientation="horizontal">
 
         <cn.xiaojs.xma.ui.widget.BottomLineCheckButton
@@ -134,6 +135,7 @@
 
     </RadioGroup>
 
+    <View style="@style/DividerHorizontal"/>
     <TextView
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
@@ -141,12 +143,12 @@
         android:minLines="6"
         android:textSize="@dimen/font_30px"
         android:textColor="@color/font_black"
+        android:background="@color/white"
         android:padding="@dimen/px30"
         />
 
 
 
-    <View style="@style/DividerHorizontal" />
 </LinearLayout>
 
 
