--- a/app/src/main/res/layout/layout_import_vodeo_item.xml
+++ b/app/src/main/res/layout/layout_import_vodeo_item.xml
@@ -4,7 +4,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
         app:showLine="true"
         >
 
@@ -56,5 +57,11 @@
             android:layout_marginTop="@dimen/px2"
             android:layout_marginBottom="@dimen/px18"
             />
+    <Button
+            android:id="@+id/open_button"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px120"
+            android:layout_alignLeft="@id/icon"
+            android:background="@android:color/transparent"/>
 
 </cn.xiaojs.xma.ui.widget.CheckableRelativeLayout>
