--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -165,4 +165,6 @@
     <color name="circle_pro">#809ac3</color>
     <color name="del_red">#ff6161</color>
 
+    <color name="blue_gentle">#92c9ec</color>
+
 </resources>
