--- a/app/src/main/res/layout/activity_class_info.xml
+++ b/app/src/main/res/layout/activity_class_info.xml
@@ -104,7 +104,7 @@
             <TextView
                     style="@style/LiveLessonRightEntrance"
                     android:drawableRight="@null"
-                    android:text="@string/qr_code"
+                    android:text="@string/share_class"
                     android:gravity="left|center_vertical"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_28px"
