--- a/app/src/main/res/layout/activity_search_lesson.xml
+++ b/app/src/main/res/layout/activity_search_lesson.xml
@@ -1,66 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px90"
-            android:background="@color/white"
-            android:orientation="horizontal">
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px90"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_arrow"
-                android:layout_marginLeft="@dimen/px30"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical"/>
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:src="@drawable/back_arrow"
+            android:visibility="gone" />
 
         <cn.xiaojs.xma.ui.widget.EditTextDel
-                android:id="@+id/search_input"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_search"
-                android:paddingLeft="@dimen/px10"
-                android:paddingRight="@dimen/px10"
-                android:hint="@string/hint_input_lesson_name"
-                android:layout_gravity="center_vertical"
-                android:textSize="@dimen/font_28px"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:background="@drawable/grey_conner_bg"
-                android:paddingBottom="@dimen/px15"
-                android:paddingTop="@dimen/px15"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_height="wrap_content"
-                android:singleLine="true"/>
+            android:id="@+id/search_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_weight="1"
+            android:background="@drawable/grey_conner_bg"
+            android:drawableLeft="@drawable/ic_search"
+            android:gravity="center_vertical"
+            android:hint="@string/hint_input_lesson_name"
+            android:imeOptions="actionSearch"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/px15"
+            android:paddingLeft="@dimen/px10"
+            android:paddingRight="@dimen/px10"
+            android:paddingTop="@dimen/px15"
+            android:singleLine="true"
+            android:textSize="@dimen/font_28px" />
 
         <TextView
-                android:id="@+id/search_ok"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
-                android:layout_gravity="center_vertical"
-                android:textColor="@drawable/orange_click_text_selector"
-                android:text="@string/cancel"/>
+            android:id="@+id/search_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:text="@string/cancel"
+            android:textColor="@drawable/orange_click_text_selector" />
 
     </LinearLayout>
 
-    <View style="@style/DividerHorizontal"/>
-
+    <View style="@style/DividerHorizontal" />
 
 
     <FrameLayout
         android:id="@+id/search_empty"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -71,16 +70,16 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_empty"/>
+                android:src="@drawable/ic_search_empty" />
 
             <TextView
-                android:text="暂无搜索结果～"
-                android:textSize="@dimen/font_28px"
-                android:textColor="@color/common_text"
-                android:layout_marginTop="@dimen/px30"
-                android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/px30"
+                android:text="暂无搜索结果～"
+                android:textColor="@color/common_text"
+                android:textSize="@dimen/font_28px" />
         </LinearLayout>
 
     </FrameLayout>
@@ -90,8 +89,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        />
+        android:scrollbars="none" />
 
 
 </LinearLayout>
