--- a/app/src/main/res/layout/layout_recorded_lesson_footer.xml
+++ b/app/src/main/res/layout/layout_recorded_lesson_footer.xml
@@ -17,11 +17,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/px90"
-            android:drawableLeft="@drawable/ic_add"
+            android:drawableLeft="@drawable/ic_add_blue"
             android:gravity="center"
             android:text="@string/import_video"
             android:textSize="@dimen/font_30px"
-            android:textColor="@color/common_text"
+            android:textColor="@color/subject_selected_blue"
             android:layout_gravity="center"
             android:drawablePadding="@dimen/px20"
             />
