--- a/app/src/main/res/layout/activity_material_tab.xml
+++ b/app/src/main/res/layout/activity_material_tab.xml
@@ -1,133 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<merge  xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px90"
+                android:background="@color/white"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/left_image"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingLeft="@dimen/px26"
+                    android:paddingRight="@dimen/px26"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/back_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"/>
+
+            <Button
+                    android:id="@+id/choice_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/px32"
+                    android:paddingRight="@dimen/px32"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:text="@string/choice_all"
+                    android:textSize="@dimen/font_26px"
+                    android:background="@android:color/transparent"
+                    android:textColor="@drawable/orange_click_text_selector"
+                    android:visibility="gone"/>
+
+            <TextView
+                    android:id="@+id/title_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_32px"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/font_black"
+                    android:text="@string/my_documents"
+                    android:visibility="gone"/>
+
+
+            <RadioGroup
+                    android:id="@+id/lay_tab_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    >
+
+                <RadioButton
+                        android:id="@+id/tab_material"
+                        android:layout_width="@dimen/px180"
+                        android:layout_height="wrap_content"
+                        android:text="@string/data_bank_of_mine"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:textSize="@dimen/font_26px"
+                        android:textColor="@drawable/class_lesson_check_text_selector"
+                        android:paddingBottom="@dimen/px11"
+                        android:paddingTop="@dimen/px11"
+                        android:background="@drawable/bg_class_lesson_left_selector"
+                        />
+
+                <RadioButton
+                        android:id="@+id/tab_download"
+                        android:layout_width="@dimen/px180"
+                        android:layout_height="wrap_content"
+                        android:text="@string/download_of_mine"
+                        android:textColor="@drawable/class_lesson_check_text_selector"
+                        android:gravity="center"
+                        android:button="@null"
+                        android:textSize="@dimen/font_26px"
+                        android:paddingBottom="@dimen/px11"
+                        android:paddingTop="@dimen/px11"
+                        android:background="@drawable/bg_class_lesson_right_selector"/>
+
+            </RadioGroup>
+
+
+            <ImageView
+                    android:id="@+id/mode_btn"
+                    android:paddingLeft="@dimen/px26"
+                    android:paddingRight="@dimen/px26"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_add"
+                    />
+
+            <ImageView
+                    android:id="@+id/upload_btn"
+                    android:paddingLeft="@dimen/px26"
+                    android:paddingRight="@dimen/px26"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_toLeftOf="@id/mode_btn"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_add"
+                    />
+
+            <Button
+                    android:id="@+id/cancel_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:text="@string/cancel"
+                    android:textSize="@dimen/font_26px"
+                    android:background="@android:color/transparent"
+                    android:textColor="@drawable/orange_click_text_selector"
+                    android:visibility="gone"/>
+
+
+        </RelativeLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px1"
+                android:background="@color/top_line"/>
+
+        <cn.xiaojs.xma.ui.widget.NoScrollViewPager
+                android:id="@+id/tab_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:orientation="vertical">
+        </cn.xiaojs.xma.ui.widget.NoScrollViewPager>
+
+    </LinearLayout>
 
     <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/px90"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
+            android:id="@+id/material_uploading_wrapper"
+            android:visibility="gone"
+            android:background="@color/translucent_50"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-                android:id="@+id/left_image"
-                android:layout_gravity="left|center_vertical"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_alignParentLeft="true"
+        <LinearLayout
+                android:orientation="vertical"
                 android:layout_centerInParent="true"
-                android:src="@drawable/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <Button
-                android:id="@+id/choice_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/px32"
-                android:paddingRight="@dimen/px32"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:text="@string/choice_all"
-                android:textSize="@dimen/font_26px"
-                android:background="@android:color/transparent"
-                android:textColor="@drawable/orange_click_text_selector"
-                android:visibility="gone"/>
+            <TextView
+                    android:id="@+id/material_up_load_name"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_30px"
+                    android:text="@string/up_loading"
+                    android:layout_marginLeft="@dimen/px50"
+                    android:layout_marginRight="@dimen/px50"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-        
-        <RadioGroup
-                android:id="@+id/lay_tab_group"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:orientation="horizontal"
-                android:gravity="center"
-                >
-            <RadioButton
-                    android:id="@+id/tab_material"
-                    android:layout_width="@dimen/px180"
-                    android:layout_height="wrap_content"
-                    android:text="@string/data_bank_of_mine"
-                    android:button="@null"
-                    android:gravity="center"
+            <TextView
+                    android:id="@+id/uploading"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/font_26px"
-                    android:textColor="@drawable/class_lesson_check_text_selector"
-                    android:paddingBottom="@dimen/px11"
-                    android:paddingTop="@dimen/px11"
-                    android:background="@drawable/bg_class_lesson_left_selector"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/px50"
                     />
-            <RadioButton
-                    android:id="@+id/tab_download"
-                    android:layout_width="@dimen/px180"
-                    android:layout_height="wrap_content"
-                    android:text="@string/download_of_mine"
-                    android:textColor="@drawable/class_lesson_check_text_selector"
-                    android:gravity="center"
-                    android:button="@null"
-                    android:textSize="@dimen/font_26px"
-                    android:paddingBottom="@dimen/px11"
-                    android:paddingTop="@dimen/px11"
-                    android:background="@drawable/bg_class_lesson_right_selector"/>
-            
-        </RadioGroup>
-        
+
+            <ProgressBar
+                    android:id="@+id/material_up_load_progress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:minHeight="@dimen/px4"
+                    android:maxHeight="@dimen/px4"
+                    android:max="100"
+                    android:progress="0"
+                    android:layout_marginTop="@dimen/px25"
+                    android:progressDrawable="@drawable/progress_live"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/px50"
+                    android:layout_marginRight="@dimen/px50"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
 
         <ImageView
-                android:id="@+id/mode_btn"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_alignParentRight="true"
+                android:id="@+id/material_up_load_close"
+                android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
+                android:layout_marginBottom="@dimen/px80"
+                android:src="@drawable/ic_close"
+                android:scaleType="fitXY"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_add"
-                />
-
-        <ImageView
-                android:id="@+id/upload_btn"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_toLeftOf="@id/mode_btn"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_add"
-                />
-
-        <Button
-                android:id="@+id/cancel_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:text="@string/cancel"
-                android:textSize="@dimen/font_26px"
-                android:background="@android:color/transparent"
-                android:textColor="@drawable/orange_click_text_selector"
-                android:visibility="gone"/>
-
-
+                android:layout_height="wrap_content"/>
     </RelativeLayout>
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px1"
-            android:background="@color/top_line"/>
 
-    <cn.xiaojs.xma.ui.widget.NoScrollViewPager
-            android:id="@+id/tab_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffffff"
-            android:orientation="vertical" >
-    </cn.xiaojs.xma.ui.widget.NoScrollViewPager>
-
-</LinearLayout>
+</merge>
