--- a/app/src/main/res/layout/layout_material_item.xml
+++ b/app/src/main/res/layout/layout_material_item.xml
@@ -123,7 +123,7 @@
                     android:gravity="center"
                     android:drawablePadding="@dimen/px10"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"/>
+                    android:visibility="gone"/>
 
             <TextView
                     android:id="@+id/material_item_opera2"
